--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,11 @@
 </head>
 
 <body>
-	<noscript>
+	<!-- <noscript>
 		You need to enable JavaScript to run this app.
-	</noscript>
+	</noscript> -->
 	<div id="root"></div>
+	<script type="module" src="/src/index.jsx"></script>
 	<!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
